[package]
name = "rexx-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
lsp-server = "0.7.8"
lsp-types = "0.97.0"
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.140"

[build-dependencies]
ungrammar = "1.16.1"
write-json = "0.1.4"
